Fix #111086: Ignore Scroller Zones in Invisible Regions

If a region is hidden then there is no reason to detect or
consider its (also hidden) scroller action zones.

Pull Request: https://projects.blender.org/blender/blender/pulls/111126